Issue #187 - Make buttons pop a bit more with double border width

--- a/public/static/css/main.styl
+++ b/public/static/css/main.styl
@@ -195,10 +195,10 @@ a
 #tags li a
   padding 5px
   background-color #f9f9f9
-  border-bottom 1px solid #999999
-  border-right 1px solid #999999
-  border-left 1px solid #dddddd
-  border-top 1px solid #dddddd
+  border-bottom 2px solid #999999
+  border-right 2px solid #999999
+  border-left 2px solid #dddddd
+  border-top 2px solid #dddddd
   border-radius 10%
 
 .clear
